--- a/lahiye.html
+++ b/lahiye.html
@@ -18,8 +18,8 @@
         <div id="myDIV" class="header">
             <h2>To-Do List</h2>
             <br>
-            <img class="sekil1" src="Group 74.png" alt="sekil1" style="float:right; margin-right: 13%;">
-            <img class="sekil2" src="Group 90.png" alt="sekil2" style="float:right; margin-right: 13%; display: none;">
+            <img class="sekil1" src="Group 74.png" alt="sekil1" style="padding: 2px; float:right; margin-right: 13%;">
+            <img class="sekil2" src="Group 90.png" alt="sekil2" style="padding: 2px; float:right; margin-right: 13%; display: none;">
             <br>
             <br>
                 <input type="text" id="myInput" placeholder="Bura yazin...">
